# manticore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  annotated.html  classes.html  classmanticore_1_1Executor-members.html  classmanticore_1_1Executor.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e84b083493121a6eb74ee4e7a658e534.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  manticore.tag  manticore_8hpp.html  manticore_8hpp_source.html  namespacemanticore.html  namespaces.html
docs/search/: all_0.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_0.js  files_0.js  functions_0.js  functions_2.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
include/manticore/: manticore.hpp
tests/: README.md
tests/R/: DESCRIPTION  NAMESPACE
tests/R/R/: RcppExports.R  manticore.tests-package.R
tests/R/src/: Makevars  RcppExports.cpp  matrix.cpp  runif.cpp
tests/R/tests/: testthat.R
tests/R/tests/testthat/: setup.R  test-matrix.R  test-runif.R
